# go-learning

./: .gitignore  BUILD  BUILD.bazel  README.md  WORKSPACE  chan.go  controlflow.go  function.go  go.md  go.mod  goroutine.go  http.go  map.go  pointer.go  select.go  setup.md  slice.go  struct.go  type.go
basic/: BUILD.bazel  basic.go  basic_test.go  data_type.go  function.go  main.go
bytes/: app.go
chat/: server.go
collection/: collection.go
command/: cmd.go  flag.go
common-lib/: BUILD.bazel  main.go
context/: context.go
controlflow/: BUILD.bazel  controlflow.go
coroutine/: coroutine.go
crawler/: main.go
crawler/engine/: default.go
crawler/fetcher/: fetcher.go
crawler/hupu/parser/: topic.go  topic_detail.go  topic_test.go
crawler/scheduler/: default.go
cron/: go.mod
cron/src/: main.go
cron/src/database/: mysql.go
cron/static/: hello.html
error/: app.go  error.md
exercise/maze/: maze.go
func/: app.go
goroutine/: app.go  goroutine.md
http/: http.go
interface/: interface.go
interface/mock/: downloader.go  netdisk.go
io/: io.go
json/: json.go
map/: map.go
module2/task1/: main.go
module2/task2/: main.go
object/: object.go
reflect/: reflect.go
select/: select.go
slice/: slice.go
source/: README.md  test.txt
source/error/: error.go
source/lock/: lock.go
source/regex/: regex.go
source/sync/: sync.go
source/tcp/: client.go  server.go
string/: app.go  string.md
stringutil/: BUILD.bazel  reverse_test.go
sync/: app.go  sync.md
test/: app.go  app_test.go
time/: time.go
tmp/: enc.java  log.java  refer
type/: app.go  type.md
(+36 files in other folders)
