load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["basic.go"],
    importpath = "github.com/pain400/bzdemo/basic",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "basic",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
