load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["controlflow.go"],
    importpath = "github.com/pain400/bzdemo/controlflow",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "controlflow",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
